added script tag for excel

--- a/templates/index.html
+++ b/templates/index.html
@@ -1976,5 +1976,6 @@
     <script src="/static/settle-later.js"></script>
     <script src="/static/settle-later-fix.js"></script>
     <script src="/static/revenue-protection.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   </body>
 </html>
