--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="app-container">
       <!-- Header -->
       <header class="header">
-        <h1>CIBARA</h1>
+        <h1>CIBARA COMFORTS</h1>
         <div class="header-actions">
           <button
             id="refresh-btn"
