--- a/templates/index.html
+++ b/templates/index.html
@@ -2023,11 +2023,11 @@
     <script src="/static/analytics.js"></script>
     <script src="/static/expense.js"></script>
     <script src="/static/booking.js"></script>
-    <script src="/static/history.js"></script>
     <script src="/static/settle-later.js"></script>
     <script src="/static/settle-later-fix.js"></script>
     <script src="/static/revenue-protection.js"></script>
     <script src="/static/transaction-tracking.js"></script>
+    <script src="/static/room-cleaning.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   </body>
 </html>
